noinst_LIBRARIES = libOW_Xml.a

libOW_Xml_a_SOURCES = \
OW_XMLAttribute.cpp \
OW_XMLNode.cpp \
OW_XMLParser.cpp \
OW_XMLOperationGeneric.cpp \
OW_Param.cpp \
OW_XMLClass.cpp \
OW_XMLQualifier.cpp \
OW_XMLParserSax.cpp \
OW_XMLParameters.cpp \
OW_RequestHandlerIFCXML.cpp \
OW_XMLEscape.cpp \
OW_XMLUnescape.cpp \
OW_XMLCIMFactory.cpp \
OW_CIMtoXML.cpp

pkginclude_HEADERS = \
OW_Param.hpp         \
OW_XML.hpp            \
OW_XMLAttribute.hpp  \
OW_XMLNode.hpp \
OW_XMLClass.hpp \
OW_XMLOperationGeneric.hpp \
OW_XMLParameters.hpp \
OW_XMLParser.hpp \
OW_XMLQualifier.hpp \
OW_XMLException.hpp \
OW_XMLParserSax.hpp \
OW_XMLEscape.hpp \
OW_RequestHandlerIFCXML.hpp \
OW_XMLUnescape.hpp \
OW_XMLCIMFactory.hpp \
OW_CIMtoXML.hpp



INCLUDES = \
-I$(top_srcdir)/src/common	\
-I$(top_srcdir)/src/common/socket	\
-I$(top_srcdir)/src/cim		\
-I$(top_srcdir)/src/client

